# kmeansOMP

./: CMakeLists.txt  main.cpp  p_kmeans.h  s_kmeans.h  utils.h
